--- a/_features.scss
+++ b/_features.scss
@@ -225,3 +225,26 @@
         flex-direction: column;
     }
 }
+
+@mixin enable-social-icons-styles {
+    .social-icons {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+    }
+
+    .icon {
+        display: inline-block;
+        width: 1.5rem;
+        height: 1.5rem;
+        margin: 0;
+        padding: 0;
+        background-position: center;
+        background-size: cover;
+        text-decoration: none;
+    }
+
+    .facebook-icon {
+        background-image: url('../images/icon-facebook.svg');
+    }
+}
