--- a/_defaults.scss
+++ b/_defaults.scss
@@ -22,33 +22,33 @@ $use-rfs-typography: if(vars.$use-rfs-typography, vars.$use-rfs-typography, true
     //
     // Generate palettes for full colors, grays, and theme colors.
 
-    @each $color, $value in $colors {
-        --#{$prefix}#{$color}: #{$value};
-    }
-
-    @each $color, $value in $grays {
-        --#{$prefix}gray-#{$color}: #{$value};
-    }
-
-    @each $color, $value in $theme-colors {
-        --#{$prefix}#{$color}: #{$value};
-    }
-
-    @each $color, $value in $theme-colors-rgb {
-        --#{$prefix}#{$color}-rgb: #{$value};
-    }
-
-    @each $color, $value in $theme-colors-text {
-        --#{$prefix}#{$color}-text-emphasis: #{$value};
-    }
-
-    @each $color, $value in $theme-colors-bg-subtle {
-        --#{$prefix}#{$color}-bg-subtle: #{$value};
-    }
-
-    @each $color, $value in $theme-colors-border-subtle {
-        --#{$prefix}#{$color}-border-subtle: #{$value};
-    }
+    //@each $color, $value in $colors {
+    //    --#{$prefix}#{$color}: #{$value};
+    //}
+    //
+    //@each $color, $value in $grays {
+    //    --#{$prefix}gray-#{$color}: #{$value};
+    //}
+    //
+    //@each $color, $value in $theme-colors {
+    //    --#{$prefix}#{$color}: #{$value};
+    //}
+    //
+    //@each $color, $value in $theme-colors-rgb {
+    //    --#{$prefix}#{$color}-rgb: #{$value};
+    //}
+    //
+    //@each $color, $value in $theme-colors-text {
+    //    --#{$prefix}#{$color}-text-emphasis: #{$value};
+    //}
+    //
+    //@each $color, $value in $theme-colors-bg-subtle {
+    //    --#{$prefix}#{$color}-bg-subtle: #{$value};
+    //}
+    //
+    //@each $color, $value in $theme-colors-border-subtle {
+    //    --#{$prefix}#{$color}-border-subtle: #{$value};
+    //}
 
     //--#{$prefix}white-rgb: #{to-rgb($white)};
     //--#{$prefix}black-rgb: #{to-rgb($black)};
