--- a/_defaults.scss
+++ b/_defaults.scss
@@ -198,16 +198,18 @@ $use-rfs-typography: if(vars.$use-rfs-typography, vars.$use-rfs-typography, true
 // scss-docs-start reboot-body-rules
 body {
     margin: 0; // 1
-    //font-family: var(--#{$prefix}body-font-family);
-    font-family: var(--theme-body-font-family);
-    @include font-size(var(--#{$prefix}body-font-size));
-    font-weight: var(--#{$prefix}body-font-weight);
-    line-height: var(--#{$prefix}body-line-height);
-    color: var(--#{$prefix}body-color);
+    @if vars.$skip-theme-json-styles-duplicates == false {
+        //font-family: var(--#{$prefix}body-font-family);
+        font-family: var(--theme-body-font-family);
+        @include font-size(var(--#{$prefix}body-font-size));
+        font-weight: var(--#{$prefix}body-font-weight);
+        line-height: var(--#{$prefix}body-line-height);
+        color: var(--#{$prefix}body-color);
+    }
     text-align: var(--#{$prefix}body-text-align);
     background-color: var(--#{$prefix}body-bg); // 2
-    -webkit-text-size-adjust: 100%; // 3
-    -webkit-tap-highlight-color: rgba($black, 0); // 4
+    //-webkit-text-size-adjust: 100%; // 3
+    //-webkit-tap-highlight-color: rgba($black, 0); // 4
 }
 // scss-docs-end reboot-body-rules
 
