--- a/_mixins.scss
+++ b/_mixins.scss
@@ -57,12 +57,21 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 //********** hidden text
 
 @mixin textHidden {
-    position: absolute;
-    left: -10000px;
-    top: auto;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important; // Fix for https://github.com/twbs/bootstrap/issues/25686
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+
+    // Fix for positioned table caption that could become anonymous cells
+    &:not(caption) {
+        position: absolute !important;
+        top: auto !important;
+        left: -10000px !important;
+    }
 }
 
 //********** Clearfix mixin.
