--- a/_wp-core.scss
+++ b/_wp-core.scss
@@ -220,7 +220,7 @@ $mobile-breakpoint: vars.$mobile;
                 //display: table-caption;
                 @include margin-bottom(0);
                 //@include margin-top(0.5rem);
-                text-align: center;
+                //text-align: center;
             }
         }
 
